alterado dados do site

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iMovi</title>
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <title>Movimente-se</title>
+    <link rel="shortcut icon" href="img/transferir.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
@@ -22,8 +22,8 @@
     <nav class="navbar navbar-expand-lg fixed-top bg-primary-color" id="navbar">
         <div class="container py-3">
             <a href="#" class="navbar-brand" >
-                <img src="img/imovi-icon.png" alt="icone">
-                <span>iMovi</span>
+                <img src="img/transferir.png" alt="icone">
+                <span>Movimente-se</span>
             </a>
             <button class="navbar-toggler" 
             type="button" 
@@ -75,24 +75,24 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/banner-1.jpg" alt="Casa1" class="d-block w-100">
+                    <img src="img/hori 1.jpeg" alt="Casa1" class="d-block w-100">
                     <div class="carousel-caption">
-                        <h5>Casas Planejadas</h5>
-                        <a href="#" class="btn btn-dark">Ver Projeto</a>
+                        <h5>Faça exercício</h5>
+                        <a href="#" class="btn btn-dark">Mudar de vida!</a>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/banner-2.jpg" alt="Casa1" class="d-block w-100">
+                    <img src="img/hori 5.jpeg" alt="Casa1" class="d-block w-100">
                     <div class="carousel-caption">
-                        <h5>Projetos complexos</h5>
-                        <a href="#" class="btn btn-dark">Ver Projeto</a>
+                        <h5>Explore novos locais</h5>
+                        <a href="#" class="btn btn-dark">Mudar de vida!</a>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="img/banner-3.jpg" alt="Casa1" class="d-block w-100">
+                    <img src="img/hori 4.jpeg" alt="Casa1" class="d-block w-100">
                     <div class="carousel-caption">
-                        <h5>Projetos inovadores</h5>
-                        <a href="#" class="btn btn-dark">Ver Projeto</a>
+                        <h5>Faça amigos</h5>
+                        <a href="#" class="btn btn-dark">Mudar de vida!</a>
                     </div>
                 </div>
             </div>
@@ -110,9 +110,9 @@
             <div class="row">
                 <div class="col-12 col-md-4">
                     <div class="card text-center">
-                        <i class="bi bi-box primary-color"></i>
+                        <i class="bi bi-bicycle primary-color"></i>
                         <div class="card-body">
-                            <h5 class="card-title primary-color">Projetos Completos</h5>
+                            <h5 class="card-title primary-color">Tipos de bicicletas</h5>
                             <p class="card-text secondary-color">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                             <a href="#" class="btn btn-dark">Saber Mais</a>
                         </div>
@@ -120,9 +120,9 @@
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="card text-center">
-                        <i class="bi bi-layers primary-color"></i>
+                        <i class="bi bi-activity primary-color"></i>
                         <div class="card-body">
-                            <h5 class="card-title primary-color">Você Participa Também</h5>
+                            <h5 class="card-title primary-color">Prós ao se exercitar</h5>
                             <p class="card-text secondary-color">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                             <a href="#" class="btn btn-dark">Saber Mais</a>
                         </div>
@@ -130,9 +130,9 @@
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="card text-center">
-                        <i class="bi bi-lightning-charge primary-color"></i>
+                        <i class="bi bi-emoji-heart-eyes primary-color"></i>
                         <div class="card-body">
-                            <h5 class="card-title primary-color">Adiantamento de Entregas</h5>
+                            <h5 class="card-title primary-color">Seu corpo agradece</h5>
                             <p class="card-text secondary-color">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                             <a href="#" class="btn btn-dark">Saber Mais</a>
                         </div>
@@ -144,51 +144,72 @@
     <!--Destaques-->
     <div class="container" id="featured-container">
         <div class="col-12">
-            <h2 class="title primary-color">Trabalhos em destaque</h2>
-            <p class="subtitle secondary-color">Conheça os nossos projetos mais desafiadores</p>
+            <h2 class="title primary-color">Fotos</h2>
+            <p class="subtitle secondary-color">Aproveitem algumas fotos tirardas durante os passeios realizados</p>
         </div>
         <div class="col-12" id="featured-images">
             <div class="row g-4">
                 <div class="col-12 col-md-4">
-                    <img src="img/project-1.jpg" alt="Projeto1" class="img-fluid">
+                    <img src="img/vert 1.jpeg" alt="Projeto1" class="img-fluid">
                     <div class="banner-content">
-                        <p class="secondary-color">Categoria</p>
-                        <h3>Nome do projeto</h3>
+                        <p class="secondary-color">Domingo</p>
+                        <h3>Capela Usina barbacena</h3>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="img/project-2.jpg" alt="Projeto2" class="img-fluid">
+                    <img src="img/Vert 2.jpeg" alt="Projeto2" class="img-fluid">
                     <div class="banner-content">
-                        <p class="secondary-color">Categoria</p>
-                        <h3>Nome do projeto</h3>
+                        <p class="secondary-color">Pedalada noturna</p>
+                        <h3>Foto noturna</h3>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="img/project-3.jpg" alt="Projeto3" class="img-fluid">
+                    <img src="img/Vert 3.jpeg" alt="Projeto3" class="img-fluid">
                     <div class="banner-content">
-                        <p class="secondary-color">Categoria</p>
-                        <h3>Nome do projeto</h3>
+                        <p class="secondary-color">Pedalada noturna</p>
+                        <h3>Foto noturna</h3>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="img/project-4.jpg" alt="Projeto4" class="img-fluid">
+                    <img src="img/Vert 4.jpeg" alt="Projeto4" class="img-fluid">
                     <div class="banner-content">
-                        <p class="secondary-color">Categoria</p>
-                        <h3>Nome do projeto</h3>
+                        <p class="secondary-color">Domingo</p>
+                        <h3>Cristo de Pitangueiras-SP</h3>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="img/project-5.jpg" alt="Projeto5" class="img-fluid">
+                    <img src="img/vert 5.jpeg" alt="Projeto5" class="img-fluid">
                     <div class="banner-content">
-                        <p class="secondary-color">Categoria</p>
-                        <h3>Nome do projeto</h3>
+                        <p class="secondary-color">Domingo</p>
+                        <h3>Fazenda vista alegre</h3>
                     </div>
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="img/project-6.jpg" alt="Projeto6" class="img-fluid">
+                    <img src="img/Vert 6.jpeg" alt="Projeto6" class="img-fluid">
                     <div class="banner-content">
-                        <p class="secondary-color">Categoria</p>
-                        <h3>Nome do projeto</h3>
+                        <p class="secondary-color">Domingo</p>
+                        <h3>Padoca da Selma</h3>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="img/vert 7.jpeg" alt="Projeto6" class="img-fluid">
+                    <div class="banner-content">
+                        <p class="secondary-color">Pedalada noturna</p>
+                        <h3>Capela abandonada</h3>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="img/vert 8.jpeg" alt="Projeto6" class="img-fluid">
+                    <div class="banner-content">
+                        <p class="secondary-color">Domingo</p>
+                        <h3>Capela da água sumida</h3>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="img/vert 9.jpeg" alt="Projeto6" class="img-fluid">
+                    <div class="banner-content">
+                        <p class="secondary-color">Domingo</p>
+                        <h3>Estrada de terra</h3>
                     </div>
                 </div>
             </div>
@@ -198,12 +219,12 @@
     <div class="container" id="info-container">
         <div class="col-12">
             <h2 class="title primary-color">Detalhes importantes</h2>
-            <p class="subtitle secondary-color">Saiba mais sobre a experiência da nossa equipe</p>
+            <p class="subtitle secondary-color">Saiba mais sobre conquistas por andar de bicicleta</p>
         </div>
         <div class="col-12">
             <div class="row">
                 <div class="col-12 col-md-5" id="info-banner">
-                    <img src="img/infobanner.jpg" alt="informações da empresa" class="img-fluid">
+                    <img src="img/info.jpeg" alt="informações da empresa" class="img-fluid">
                 </div>
                 <div class="col-12 col-md-7 bg-secondary-color" id="info-content">
                     <div class="row">
